--- a/recipes/cuik_molmaker/meta.yaml
+++ b/recipes/cuik_molmaker/meta.yaml
@@ -17,26 +17,11 @@ build:
     - TORCH_VERSION={{ pytorch_version }}
   number: 0
 
-#   # Uncomment the following line if the package is pure Python and the recipe is exactly the same for all platforms.
-#   # It is okay if the dependencies are not built for all platforms/versions, although selectors are still not allowed.
-#   # See https://conda-forge.org/docs/maintainer/knowledge_base.html#noarch-python for more details.
-#   # noarch: python
-#   # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
-#   # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
-#   # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
-#   skip: True  # [py<310]
-#   # More info about selectors can be found in the conda-build docs: 
-#   # https://docs.conda.io/projects/conda-build/en/latest/resources/define-metadata.html#preprocessing-selectors
-#   script: build.sh  # [unix]
-#   number: 0
-
 requirements:
   build:
-    # If your project compiles code (such as a C extension) then add the required compilers as separate entries here.
-    # Compilers are named 'c', 'cxx', 'fortran', among others
     - {{ compiler('cxx') }}
-    - cmake  # if using CMake
-    - make   # if using Makefiles
+    - cmake  # using CMake
+    - make   # using Makefiles
     - cross-python_{{ target_platform }}  # [build_platform != target_platform]
     - python
     - eigen
